Fixed the alignment for the field-reset, fixes #13

--- a/blocks/field/field.styl
+++ b/blocks/field/field.styl
@@ -32,3 +32,7 @@
   kind: field-right 0.5*$s
   skin: icon remove with-hover
   margin-right: $s * -1
+  height: auto
+
+  &:before
+    content: " "
