--- a/style.ie.css
+++ b/style.ie.css
@@ -1426,6 +1426,9 @@ textarea.input-controller {
   padding: 5px 5px 5px 5px;
   margin-right: -10px;
 }
+.field-reset:before {
+  content: " ";
+}
 .tabs {
   position: relative;
   display: block;
